--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js:
    - "0.12"
-   - "0.11"
-   - "0.10"
+branches:
+  only:
+    - master
+env:
+  - PACKAGE_VERSION="2.6.0"
