Updated and added Grunt test related files

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ node_js:
 branches:
   only:
     - master
-env:
-  - PACKAGE_VERSION="2.6.0"
 
 before_script:
   - npm install -g grunt-cli
 
-script: grunt test --verbose --force
+script: grunt default --verbose --force
